Insurance Claim Initial

--- a/config/contexts/devnet.yaml
+++ b/config/contexts/devnet.yaml
@@ -1,24 +1,24 @@
 # Devnet context to be used for local deployments against Anvil chain
-version: 0.0.2
+version: 0.0.3
 context:
   # Name of the context
   name: "devnet"
   # Chains available to this context
   chains:
-    l1: 
+    l1:
       chain_id: 31337
       rpc_url: "http://localhost:8545"
       fork:
         block: 22475020
-        url: ""
-        block_time: 3
+        url: "https://eth.llamarpc.com"
+        block_time: 12
     l2:
       chain_id: 31337
       rpc_url: "http://localhost:8545"
       fork:
         block: 22475020
-        url: ""
-        block_time: 3
+        url: "https://eth.llamarpc.com"
+        block_time: 12
   # All key material (BLS and ECDSA) within this file should be used for local testing ONLY
   # ECDSA keys used are from Anvil's private key set
   # BLS keystores are deterministically pre-generated and embedded. These are NOT derived from a secure seed
