--- a/.gitignore
+++ b/.gitignore
@@ -1,214 +1,29 @@
-# Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
+# Build artifacts
+bin/
+out/
+cache/
+*.log
 
-# Go specific
-/bin/
-/pkg/
-/vendor/
-*.test
-*.out
-go.work
-
-# Build directories
-/build/
-/dist/
-/tmp/
-
-# Test binary, built with `go test -c`
-*.test
-
-# Output of the go coverage tool
-*.out
-coverage.txt
+# Go
+vendor/
+coverage.out
 coverage.html
 
-# Dependency directories
-vendor/
-
-# Go workspace file
-go.work
-
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# IDE specific files
-.idea/
-.vscode/
-*.swp
-*.swo
-*~
-.project
-.classpath
-.settings/
-.DS_Store
-
-# Logs
-*.log
-logs/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-lerna-debug.log*
-.pnpm-debug.log*
-
-# Node modules (for demo-ui)
-node_modules/
-.pnp
-.pnp.js
-
-# React/Next.js specific
-demo-ui/node_modules/
-demo-ui/.pnp
-demo-ui/.pnp.js
-demo-ui/coverage/
-demo-ui/.next/
-demo-ui/out/
-demo-ui/build/
-demo-ui/.DS_Store
-demo-ui/*.pem
-
-# Testing
-demo-ui/coverage/
-demo-ui/.nyc_output
-
-# Production
-demo-ui/build/
-demo-ui/dist/
-
-# Misc
-demo-ui/.DS_Store
-demo-ui/.env.local
-demo-ui/.env.development.local
-demo-ui/.env.test.local
-demo-ui/.env.production.local
-
-# Debug
-demo-ui/npm-debug.log*
-demo-ui/yarn-debug.log*
-demo-ui/yarn-error.log*
-
-# Local env files
-.env*.local
-
-# Vercel
-.vercel
-
-# TypeScript
-*.tsbuildinfo
-demo-ui/next-env.d.ts
-
-# Contract artifacts and cache
-contracts/artifacts/
-contracts/cache/
-contracts/typechain/
-contracts/typechain-types/
-
-# Hardhat files
-contracts/coverage
-contracts/coverage.json
-
-# Foundry files
+# Foundry
 contracts/out/
+contracts/cache/
 contracts/broadcast/
 
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.egg-info/
-.Python
-venv/
-env/
-
-# Database
-*.db
-*.sqlite
-*.sqlite3
-
-# Keys and certificates
-*.pem
-*.key
-*.crt
-*.p12
-*.pfx
-
-# Blockchain specific
+# DevKit
 .devkit/
-devnet.log
-anvil.log
 
-# Application specific logs
-performer_test.log
-ui_test.log
-build.log
-http_bridge.log
+# Environment
+.env
+.env.local
 
-# Temporary files
-*.tmp
-*.temp
-.cache/
-
-# OS generated files
+# OS
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
 
-# Archives
-*.tar
-*.tar.gz
-*.zip
-*.gz
-*.tgz
-*.bz2
-
-# Backup files
-*.bak
-*.backup
-*~
-
-# Editor backup files
-*.orig
-
-# Lock files (keep package-lock.json for npm)
-yarn.lock
-pnpm-lock.yaml
-
-# Test coverage
-htmlcov/
-.tox/
-.coverage
-.coverage.*
-.cache
-.pytest_cache/
-nosetests.xml
-coverage.xml
-*.cover
-.hypothesis/
-
-# Documentation build
-docs/_build/
-docs/.doctrees
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# pyenv
-.python-version
-
-# Ignore sensitive configuration (but keep templates)
-config/secrets.yaml
-config/production.yaml
-!config/*.example.yaml
-!config/*.template.yaml
+# IDE
+.vscode/
+.idea/
